# c-tdd

./: .gitignore  CMakeLists.txt  Makefile  my_lib.c  my_lib.h
app/: CMakeLists.txt  main.c
cmake/: AddGitSubmodule.cmake
script/: build.sh
src/: CMakeLists.txt  my_lib.c  my_lib.h
src/c_pointer_book/: CMakeLists.txt  chapter1.c
src/c_pointer_book/include/: chapter1.h
tests/: CMakeLists.txt  another_unit_tests.cpp  c_pointer_book_chapter1_test.cpp  main.cpp
